--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 
 <head>
     <!--- Basic Page Needs  -->
     <meta charset="utf-8">
-    <title>Zeedapp || App Landing Html Template</title>
+    <title>Salesdove || App Landing Html Template</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Mobile Specific Meta  -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -43,7 +43,7 @@
                     <div class="menu-area">
                         <div class="col-md-3 col-sm-12 col-xs-12">
                             <div class="logo">
-                                <a href="index.html"><img src="assets/img/icon/logo.png" alt="Zeedapp - App Landing Template"></a>
+                                <a href="index.html"><img src="assets/img/icon/logo.png" alt="Salesdove landing page"></a>
                             </div>
                         </div>
                         <div class="col-md-9 hidden-xs hidden-sm">
@@ -77,14 +77,14 @@
             <div class="col-md-6 col-sm-6 hidden-xs">
                 <div class="row">
                     <div class="slider-img">
-                        <img src="assets/img/mobile/slider-left-img.png" alt="slider image">
+                        <img src="assets/img/salesdove/salesdove.PNG" alt="slider image">
                     </div>
                 </div>
             </div>
             <div class="col-md-6 col-sm-6 col-xs-12">
                 <div class="row">
                     <div class="slider-inner text-right">
-                        <h2>Who Else Wants To User</h2>
+                        <h2>لماذا نظام salesdove؟؟</h2>
                         <h5>And Use Our Zeed App !</h5>
                         <a class="expand-video" href="https://www.youtube.com/watch?v=8qs2dZO6wcc"><i class="fa fa-play"></i>Watch the video</a>
                     </div>
@@ -126,8 +126,8 @@
     <div class="about-area ptb--100">
         <div class="container">
             <div class="section-title">
-                <h2>About App</h2>
-                <p>Nemo enim ipsam voluptatem quia voluptas sit </p>
+                <h2>عن نظام salesdove</h2>
+                <p>Sales and Inventory Managment System</p>
             </div>
             <div class="row d-flex flex-center">
                 <div class="col-md-6 col-sm-6 hidden-xs">
